# ipm.ipkg

./: Cargo.toml  README.md  tree
.github/workflows/: dev-lint.yaml
src/: main.rs  modules.rs  utils.rs
src/lib/: version.rs
src/modules/: messages.rs  package.rs  pkg.rs  project.rs  system.rs  version.rs  welcome.rs
src/modules/messages/: manual.md  welcome.txt
src/modules/messages/help/: general.txt  install.txt
src/modules/pkg/: depend.rs  install.rs  list.rs
src/modules/project/: build.rs  create.rs  install.rs  metadata.rs  package.rs  purge.rs  remove.rs
src/modules/project/create/: templates.rs
src/modules/project/create/templates/: README.md  script-README.md
src/modules/project/create/templates/default/ipkg/scripts/: build.sh  clean.sh  install.sh  package.sh  test.sh
src/modules/project/create/templates/default/scripts/: install.sh
src/modules/project/create/templates/rust/ipkg/: project-ignore.yaml
src/modules/project/create/templates/rust/ipkg/scripts/: build.sh  clean.sh  install.sh  package.sh  (+3 more)
src/modules/project/template/default/settings/: author.yaml  project.yaml
src/modules/system/: configure.rs  path.rs
src/modules/system/configure/: global.rs  local.rs
src/modules/system/configure/data/global/: README.md
src/modules/system/configure/data/local/: README.md  packages-list.yaml
src/modules/system/path/: global.rs  local.rs
src/modules/welcome/: welcome.txt
src/utils/: debug.rs  files.rs  shell.rs
src/utils/shell/: args.rs  question.rs
test/: package.yaml
test-project/: package.yaml
test/src/: main.sh
(+6 files in other folders)
