[package]
name = "ipkg"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
cmd_arg = { git = "https://github.com/The-Infinitys/rust.cmd-arg.git"}
colored = "3.0.0"
dialoguer = "0.11.0"
ignore = "0.4.23"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_toml = "0.0.1"
serde_yaml = "0.9.34"
termimad = "0.32.0"
thiserror = "2.0.12"
walkdir = "2.5.0"
zip = "4.0.0"
